# sarchive

./: .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  bdist_rpm.sh  deny.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust-clippy.yml  test.yml
.rpm/: sarchive.spec
data/: sarchive.service
src/: lib.rs  main.rs  monitor.rs  slurm.rs  torque.rs  utils.rs
src/archive/: elastic.rs  file.rs  kafka.rs  mod.rs
src/scheduler/: job.rs  mod.rs  slurm.rs  torque.rs
tests/job.123456/: environment  script
tests/job.8897161/: environment
tests/torque_job.1/: 1.mymaster.mycluster.JB  1.mymaster.mycluster.SC
tests/torque_job.2/: 2-1.mymaster.mycluster.JB  2-2.mymaster.mycluster.JB  2.mymaster.mycluster.TA
