[package]
name = "sarchive"
version = "0.12.5"
authors = ["Andy Georges <itkovian@gmail.com>"]
edition = "2021"
description = "Archival tool for slurm job scripts"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/itkovian/sarchive"
repository = "https://github.com/itkovian/sarchive"
keywords = ["slurm", "torque", "cli", "archival", "hpc"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "itkovian/sarchive" }
coveralls = { repository = "itkovian/sarchive" }
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "4.1.4"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.5"
crossbeam-queue = "0.3.5"
crossbeam-utils = "0.8.10"
fern = { version = "0.6.1", features = ["reopen-03"]}
glob = "0.3.0"
notify = "5.0.0"
libc = "0.2.68"
log = "^0.4"
reopen = "1.0.1"
signal-hook = "0.3.14"

elastic = { version = "~0.21.0-pre.5", optional = true }
elastic_derive = { version = "~0.21.0-pre.5", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_derive = { version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
sasl2-sys = "0.1.20"
rdkafka = { version = "0.28.0", optional = true, features = ["ssl", "sasl"]}
itertools = "0.10.0"

[lib]
name = "sarchive"
path = "src/lib.rs"

[[bin]]
name = "sarchive"
path = "src/main.rs"

[features]
elasticsearch-7 = ["elastic", "elastic_derive", "serde", "serde_derive", "serde_json"]
kafka = ["rdkafka", "serde", "serde_derive", "serde_json"]

[dev-dependencies]
tempfile = "3.3"

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
debug = true
split-debuginfo = "packed"

[package.metadata.rpm.cargo]
buildflags = ["--release", "--all-features"]

[package.metadata.rpm.targets]
sarchive = { path = "/usr/bin/sarchive" }

[package.metadata.rpm.files]
service = { path = "/usr/lib/systemd/system/sarchive.service" }


