[package]
name = "sarchive"
version = "0.13.1"
authors = ["Andy Georges <itkovian@gmail.com>"]
edition = "2021"
description = "Archival tool for slurm job scripts"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/itkovian/sarchive"
repository = "https://github.com/itkovian/sarchive"
keywords = ["slurm", "torque", "cli", "archival", "hpc"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "itkovian/sarchive" }
coveralls = { repository = "itkovian/sarchive" }
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "~0.4", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "~4.5", features = ["derive"] }
crossbeam = "~0.8"
crossbeam-channel = "~0.5"
crossbeam-queue = "~0.3"
crossbeam-utils = "~0.8"
enum-display-derive = "0.1.1"
fern = { version = "0.6.1", features = ["reopen-03"] }
glob = "0.3.1"
itertools = "~0.13"
libc = "0.2.155"
log = "^0.4"
notify = "6.0.1"
proc-macro2 = "~1.0"
rdkafka = { version = "~0.36", optional = true, features = ["ssl", "sasl"] }
regex = "1.10.5"
reopen = "1.0.1"
sasl2-sys = "0.1.20"
serde = { version = "~1.0", features = ["derive"], optional = true }
serde_derive = { version = "~1.0", optional = true }
serde_json = { version = "~1.0", optional = true }
signal-hook = "~0.3"

[lib]
name = "sarchive"
path = "src/lib.rs"

[[bin]]
name = "sarchive"
path = "src/main.rs"

[features]
kafka = ["rdkafka", "serde", "serde_derive", "serde_json"]

[dev-dependencies]
tempfile = "~3.12"
tokio = "1.35.1"
mockito = "1.2.0"

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
debug = true
split-debuginfo = "packed"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sarchive", dest = "/usr/bin/sarchive", mode = "755" },
    { source = ".rpm/sarchive.service", dest = "/usr/lib/systemd/system/sarchive.service", mode = "644" },
]
